--- a/index.html
+++ b/index.html
@@ -23,35 +23,114 @@
 
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">BIOME</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <!-- Page Content -->
+    <div id="container">
+      <div id="group1">
+        <div class="background">
+        </div>
+        <div class="foreground">
+
+          <!-- ABOUT -->
+          <div class="section">
+            <div class="row">
+              <div class="col s6 m3">
+                <h2>Welcome!</h2>
+
+                <div class="space-small"></div>
+
+                <p>We are Biological Interdisciplinary Open Maker Environment, a student organization at Stanford University dedicated to providing anybody the skills, resources, and support to engage in a bio-hacking project. We seek to educate our membership and the broader public by expanding the scope of biotechnology beyond its conventional bounds.</p>
+
+                <div class="space-small"></div>
+
+                <p>BIOME is an open space for anyone to do bioengineering and biology inspired projects. Interested in getting involved? Check out our calendar for information on all of our events and workshops!<p>
+                  
+              </div>
+              <div class="col s6 m3">
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+            </div> 
+          </div>
+
+          <div class="space-large"></div>
+
+          <!-- GET INVOLVED -->
+          <h2 class="center">Get Involved!</h2>
+          <div class="space-med"></div>
+          <div class="section">
+            <p>BIOME, Stanford’s Biological Interdisciplinary Open Maker Environment, is a student group dedicated to providing any Stanford student the skills, resources, and support to engage in a bio-hacking project. Bio-hacking includes any project that utilizes biological materials. We seek to educate our membership and the broader public and strive to broaden the scope of biotechnology beyond the conventional definition.
+
+            BIOME was founded in 2015 by Jordan Shapiro and Tina Ju and is supported by the Associated Students of Stanford University. We meet every other Monday from 8:00-9:00 PM. See our calendar below for more details and all of our other events and workshops. If you are interested in joining the mailing list or you have any questions, email rcdova@stanford.edu or glockner@stanford.edu.
+            </p>
+          </div>
+
+
+          <div class="space-large"></div>
+
+           <!-- TEAM section -->
+          <div class="col s12 center">
+            <h2>The Team</h2>
+          </div>
+
+          <div class="space-med"></div>
+
+          <div class="section">
+            <div class="row">
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+            </div> 
+
+            <div class="space-med"></div>
+
+            <div class="row">
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m3">
+                <h5 class="center">member</h5>
+                  <img src="img/finalogo.jpg" class="profile-pic center">
+              </div>
+
+            </div>
+
+      </div>
+
+      <div class="space-large"></div>
+
+      <!-- FOOTER -->
+      <footer class="footer">
+        <div class="container">
+          <span class="text-muted">Made by BIOME</span>
+        </div>
+      </footer>
+
+
+
+
+      </div>
+    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
