--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 
                 <div class="space-small"></div>
 
-                <p>We are Biological Interdisciplinary Open Maker Environment, a student organization at Stanford University dedicated to providing anybody the skills, resources, and support to engage in a bio-hacking project. We seek to educate our membership and the broader public by expanding the scope of biotechnology beyond its conventional bounds.</p>
+                <p id="about-focus">We are Biological Interdisciplinary Open Maker Environment, a student organization at Stanford University dedicated to providing anybody the skills, resources, and support to engage in a bio-hacking project. BIOME is an open space for anyone to do bioengineering and biology inspired projects.<p>
 
-                <div class="space-small"></div>
-
-                <p>BIOME is an open space for anyone to do bioengineering and biology inspired projects. Interested in getting involved? Check out our calendar for information on all of our events and workshops!<p>
+                <button type="button" class="btn btn-outline-success">Get involved!</button>
                   
               </div>
               <div class="col s6 m3">
@@ -53,20 +51,7 @@
 
           <div class="space-large"></div>
 
-          <!-- GET INVOLVED -->
-          <h2 class="center">Get Involved!</h2>
-          <div class="space-med"></div>
-          <div class="section">
-            <p>BIOME, Stanford’s Biological Interdisciplinary Open Maker Environment, is a student group dedicated to providing any Stanford student the skills, resources, and support to engage in a bio-hacking project. Bio-hacking includes any project that utilizes biological materials. We seek to educate our membership and the broader public and strive to broaden the scope of biotechnology beyond the conventional definition.
-
-            BIOME was founded in 2015 by Jordan Shapiro and Tina Ju and is supported by the Associated Students of Stanford University. We meet every other Monday from 8:00-9:00 PM. See our calendar below for more details and all of our other events and workshops. If you are interested in joining the mailing list or you have any questions, email rcdova@stanford.edu or glockner@stanford.edu.
-            </p>
-          </div>
-
-
-          <div class="space-large"></div>
-
-           <!-- TEAM section -->
+          <!-- TEAM section -->
           <div class="col s12 center">
             <h2>The Team</h2>
           </div>
