--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="styles.css" rel="stylesheet">
+    <!-- <link href="styles.css" rel="stylesheet"> -->
+    <link href="https://natagoh.github.io/styles.css" rel="stylesheet" type="text/css" />
 
   </head>
 
@@ -34,13 +35,17 @@
           <div class="section">
             <div class="row">
               <div class="col s6 m3">
-                <h2>Welcome!</h2>
+                <h2>A FEW WORDS ABOUT US</h2>
 
+                <div class="space-small"></div>
+                <div class="line-separator"></div>
                 <div class="space-small"></div>
 
                 <p id="about-focus">We are Biological Interdisciplinary Open Maker Environment, a student organization at Stanford University dedicated to providing anybody the skills, resources, and support to engage in a bio-hacking project. BIOME is an open space for anyone to do bioengineering and biology inspired projects.<p>
 
-                <button type="button" class="btn btn-outline-success">Get involved!</button>
+                <div class="space-small"></div>
+
+                <button type="button" class="btn btn-outline-success btn-lg">Get involved!</button>
                   
               </div>
               <div class="col s6 m3">
@@ -51,55 +56,96 @@
 
           <div class="space-large"></div>
 
-          <!-- TEAM section -->
-          <div class="col s12 center">
-            <h2>The Team</h2>
-          </div>
+          <!-- PROJECTS SECTION -->
+          <div class="section projects">
+            <div class="space-large"></div>
+            <div class="col s12 center">
+              <h2>PROJECTS</h2>
+            </div>
 
-          <div class="space-med"></div>
+            <div class="space-small"></div>
+            <div class="line-separator line-center"></div>
+            <div class="space-med"></div>
 
-          <div class="section">
             <div class="row">
-              <div class="col s6 m3">
-                <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
+              <div class="col s12 m6">
+                  <img src="img/project.png" class="project-pic center">
+                  <div class="space-small"></div>
+                  <h5 class="center">Project X</h5>
+                  <p>Project X does XYZ and has been around for m amount of years... blah blah blah</p>
               </div>
-              <div class="col s6 m3">
-                <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
-              </div>
-              <div class="col s6 m3">
-                <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
-              </div>
-              <div class="col s6 m3">
-                <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
+
+              <div class="col s12 m6">
+                  <img src="img/project.png" class="project-pic center">
+                  <div class="space-small"></div>
+                  <h5 class="center">Project X</h5>
+                  <p>Project X does XYZ and has been around for m amount of years... blah blah blah</p>
               </div>
             </div> 
 
             <div class="space-med"></div>
 
             <div class="row">
-              <div class="col s6 m3">
-                <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
+              <div class="col s12 m6">
+                  <img src="img/project.png" class="project-pic center">
+                  <div class="space-small"></div>
+                  <h5 class="center">Project X</h5>
+                  <p>Project X does XYZ and has been around for m amount of years... blah blah blah</p>
               </div>
-              <div class="col s6 m3">
-                <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
+              <div class="col s12 m6">
+                  <img src="img/project.png" class="project-pic center">
+                  <div class="space-small"></div>
+                  <h5 class="center">Project X</h5>
+                  <p>Project X does XYZ and has been around for m amount of years... blah blah blah</p>
               </div>
-              <div class="col s6 m3">
+            </div>
+            <div class="space-large"></div>
+      </div>
+
+      <div class="space-large"></div>
+
+          <!-- TEAM section -->
+          <div class="section">
+            <div class="col s12 center">
+              <h2>MEET THE TEAM</h2>
+            </div>
+
+            <div class="space-small"></div>
+            <div class="line-separator line-center"></div>
+            <div class="space-med"></div>
+
+            <div class="row">
+              <div class="col s6 m4">
                 <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
+                  <img src="img/eleanor.jpg" class="profile-pic center">
               </div>
-              <div class="col s6 m3">
+              <div class="col s6 m4">
                 <h5 class="center">member</h5>
-                  <img src="img/finalogo.jpg" class="profile-pic center">
+                  <img src="img/eleanor.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m4">
+                <h5 class="center">member</h5>
+                  <img src="img/eleanor.jpg" class="profile-pic center">
+              </div>
+            </div> 
+
+            <div class="space-med"></div>
+
+            <div class="row">
+              <div class="col s6 m4">
+                <h5 class="center">member</h5>
+                  <img src="img/eleanor.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m4">
+                <h5 class="center">member</h5>
+                  <img src="img/eleanor.jpg" class="profile-pic center">
+              </div>
+              <div class="col s6 m4">
+                <h5 class="center">member</h5>
+                  <img src="img/eleanor.jpg" class="profile-pic center">
               </div>
 
             </div>
-
       </div>
 
       <div class="space-large"></div>
