--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <!-- <link href="styles.css" rel="stylesheet"> -->
-    <link href="https://natagoh.github.io/styles.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet">
 
   </head>
 
