--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="foreground">
 
           <!-- ABOUT -->
-          <div class="section">
+          <div class="section section-about">
             <div class="row">
               <div class="col s6 m3">
                 <h2>A FEW WORDS ABOUT US</h2>
@@ -52,6 +52,26 @@
               </div>
             </div> 
           </div>
+
+          <div class="space-large"></div>
+
+          <!-- SPONSERS SECTION -->
+          <!-- <div class="section"> -->
+            <div class="row">
+              <div class="col s6 m3">
+                  <img src="img/IGEM-animated.gif" class="project-pic center">
+              </div>
+              <div class="col s6 m3">
+                  <img src="img/thermo.png" class="project-pic">
+              </div>
+              <div class="col s6 m3">
+                  <img src="img/twist.jpg" class="project-pic center">
+              </div>
+              <div class="col s6 m3">
+                  <img src="img/biodesign.png" class="project-pic">
+              </div>
+            </div> 
+          <!-- </div> -->
 
           <div class="space-large"></div>
 
@@ -152,7 +172,20 @@
       <!-- FOOTER -->
       <footer class="footer">
         <div class="container">
-          <span class="text-muted">Made by BIOME</span>
+          <div class="row">
+              <div class="col s6 m3">
+                <h2>CONTACT INFORMATION</h2>
+
+                <div class="space-small"></div>
+                <div class="line-separator"></div>
+                <div class="space-small"></div>
+
+                <p id="footer-content">Facebook, Instagram, Email stuff goes here...<p>
+              </div>
+              <div class="col s6 m3">
+                  <img src="img/finalogo-light.png" class="profile-pic center">
+              </div>
+            </div> 
         </div>
       </footer>
 
